--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "econea/nusoap",
+  "name": "johnz1n/nusoap",
   "type": "library",
   "description": "NuSOAP fixed for PHP 5.4 - 7.1",
   "keywords": ["soap","nusoap"],
   "license": "LGPL-2.0-only",
-  "homepage": "https://github.com/econea/nusoap",
+  "homepage": "https://github.com/johnz1n/nusoap",
   "authors": [
     {
       "name": "Milan Felix Šulc",
